Option to download files from servings folder

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -20,6 +20,12 @@
             </form>
             <p id="message"></p>
         </div>
+        <div class="container center">
+            <a href="serving">
+                <button>Download</button>
+            </a>
+            
+        </div>
     <script>
         var checkIcon = "{% static 'icons/check.svg' %}";
     </script>
