--- a/core/static/styles.css
+++ b/core/static/styles.css
@@ -15,6 +15,8 @@
     width: 10vw;
 }
 
+
+
 body{
     background-color: #1b3d9b;
     color: white
@@ -45,6 +47,16 @@ input[type=file]::file-selector-button{
     display: none;
 }
 
+button{
+    width: 30vw;
+    height: 15vw;
+    color: white;
+    background-color: #707070;
+    border: 4px;
+    border-color: #808080;
+    border-style: solid;
+}
+
 
 @media only screen and (min-width: 720px) {
     input[type=submit]{
@@ -56,6 +68,12 @@ input[type=file]::file-selector-button{
         width: 15vw;
         height: 15vw;
     }
+
+    button{
+        width: 15%;
+        height: fit-content;
+    }
+
     .spacer{
         height: 1vw;
         width: 1vw;
